# fo

./: README.md  pyproject.toml
karrakass/scripts/: __init__.py  fo.py
